# silnik_szachowy_v1.0-SFML_GUI

./: .gitignore  CMakeLists.txt  ChessEngine + SFML Interface.cbp  Chessboard.cpp  Chessboard.h  Engine.cpp  Engine.h  Game.cpp  Game.h  GlobalDefinitions.cpp  GlobalDefinitions.h  Menu.cpp  Menu.h  Move.cpp  Move.h  Notebook.cpp  Notebook.h  Notice.cpp  Notice.h  Play.cpp  Play.h  ReadMe.md  chars.txt  chessboard.txt  communique.txt  coordinatesChars.txt  main.cpp  pieces.txt
include/: Chessboard.h  Engine.h  Game.h  GlobalDefinitions.h  Menu.h  Move.h  Notebook.h
src/: Chessboard.cpp  Engine.cpp  Game.cpp  GlobalDefinitions.cpp  Menu.cpp  Move.cpp  Notebook.cpp  Play.cpp
